stop content overlapping

--- a/src/App.css
+++ b/src/App.css
@@ -50,35 +50,40 @@ Colours
   grid-area: allArticles;
 }
 #articlePreview {
+  text-align: left;
   text-decoration: none;
   color: #e8eddf;
   margin: 10px;
   padding: 20px;
-  display: grid;
-  grid-template-columns: 100px auto;
-  grid-template-rows: 50px 50px auto;
-  grid-template-areas:
-    "img articleTitle"
-    "img articleAuthor"
-    "img details";
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
   background-color: #242423;
 }
 
 #articlePreview img {
-  height: 8rem;
-  width: min-content;
+  flex-grow: 4;
+  padding: 10px;
+  height: 100px;
+  object-fit: contain;
 }
 
 #articleTitle {
+  flex-grow: 1;
+  padding: 10px;
   text-decoration: none;
   grid-area: articleTitle;
 }
 #articleAuthor {
+  flex-grow: 1;
+  padding: 10px;
   text-decoration: none;
   grid-area: articleAuthor;
 }
 
 #details {
+  flex-grow: 2;
+  text-align: left;
+  padding: 10px;
   grid-area: details;
 }
